--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,12 +13,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install dependencies for PSL1GHT
+      run: |
+        sudo apt-get install autoconf automake bison flex gcc libelf-dev make texinfo libncurses5-dev patch python subversion wget zlib1g-dev libtool libtool-bin python-dev bzip2 libgmp3-dev pkg-config g++ libssl-dev   
+
     - name: Setup PSL1GHT
       run: |
         git clone https://github.com/ProtoByter/ps3toolchain
         cd ps3toolchain
-        sudo ./toolchain.sh
+        sudo ./toolchain-sudo.sh
+
     - name: make
       run: make
+
     - name: make pkg
       run: make pkg
