--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -30,8 +30,8 @@ jobs:
       id: cache-psl1ght
       uses: actions/cache@v3.0.1
       with:
-        path: ${{ env.PS3DEV }}-${{ hashFiles('ps3toolchain/**') }}
-        key: psl1ght-1
+        path: ${{ env.PS3DEV }}
+        key: psl1ght-${{ hashFiles('ps3toolchain/**') }}
 
     - name: Setup PSL1GHT
       if: steps.cache-psl1ght.outputs.cache-hit != 'true'
