--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -33,7 +33,7 @@ jobs:
       id: cache-psl1ght
       with:
         path: ${{ env.PS3DEV }}
-        key: psl1ght-3
+        key: psl1ght-4
 
     - name: Setup PSL1GHT
       if: steps.cache-psl1ght.outputs.cache-hit != 'true'
@@ -51,3 +51,9 @@ jobs:
       run: |
         export PATH=$PATH:$PS3DEV/bin:$PS3DEV/ppu/bin:$PS3DEV/spu/bin
         make pkg
+        
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: lbps3patcher
+        path: build/lbps3patcher.pkg
