--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -56,4 +56,6 @@ jobs:
       uses: actions/upload-artifact@v3.0.0
       with:
         name: lbps3patcher
-        path: build/lbps3patcher.pkg
+        path: |
+          lbps3patcher.pkg
+          lbps3patcher.gnpdrm.pkg
